<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/map" />
    <item
        android:id="@+id/nav_health"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/health" />
    <item
        android:id="@+id/nav_tips"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/tips" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
